--- a/conf/application.conf
+++ b/conf/application.conf
@@ -273,6 +273,8 @@ play.filters {
 
     # The Content-Security-Policy header. If null, the header is not set.
     #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = "default-src 'self'; script-src 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/; style-src 'self' https://maxcdn.bootstrapcdn.com/bootstrap/;  font-src * data:; img-src 'self' * data:"
+
   }
 
   ## Allowed hosts filter configuration
