--- a/conf/application.conf
+++ b/conf/application.conf
@@ -273,7 +273,9 @@ play.filters {
 
     # The Content-Security-Policy header. If null, the header is not set.
     #contentSecurityPolicy = "default-src 'self'"
-    contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
+    #contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
+    contentSecurityPolicy = "default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline'"
+    #contentSecurityPolicy = "default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js; style-src 'self' https://maxcdn.bootstrapcdn.com/bootstrap/;  font-src * data:; img-src 'self' * data:"
 
   }
 
