--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@
 # You can declare variables and substitute for them:
 #mykey = ${some.value}
 #
-# And if an environment variable exists when there is no other substitution, then
+# And if an environment variable exists when there is no other subsitution, then
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 
@@ -56,7 +56,7 @@ play.modules {
   # By default, Play will load any class called Module that is defined
   # in the root package (the "app" directory), or you can define them
   # explicitly below.
-  # If there are any built-in modules that you want to enable, you can list them here.
+  # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
 
   # If there are any built-in modules that you want to disable, you can list them here.
@@ -266,17 +266,14 @@ play.filters {
     #xssProtection = "1; mode=block"
 
     # The X-Content-Type-Options header. If null, the header is not set.
-    #contentTypeOptions = "nosniff"
+    contentTypeOptions = "nginx"
 
     # The X-Permitted-Cross-Domain-Policies header. If null, the header is not set.
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
-    #contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
     contentSecurityPolicy = "default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline'"
     #contentSecurityPolicy = "default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js; style-src 'self' https://maxcdn.bootstrapcdn.com/bootstrap/;  font-src * data:; img-src 'self' * data:"
-
   }
 
   ## Allowed hosts filter configuration
@@ -350,13 +347,4 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
-}
-
-## Static assets
-# Using configuration and assets finder
-# https://www.playframework.com/documentation/latest/AssetsOverview
-# Since
-play.assets {
-  path = "/public"
-  urlPrefix = "/assets"
 }
