--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "@types/node": "^10.12.15",
+    "@types/node": "^10.17.13",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "css-loader": "^0.28.7",
