--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "register-service-worker": "^1.6.2"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
@@ -7,6 +11,10 @@
   ],
   "devDependencies": {
     "@types/node": "^10.17.13",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-pwa": "^4.1.1",
+    "@vue/cli-service": "^4.1.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.7.0",
@@ -20,9 +28,9 @@
     "ts-loader": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.2.2",
-    "vue": "^2.5.21",
+    "vue": "^2.6.11",
     "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.21",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
