--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,17 @@
   "compilerOptions": {
     // this aligns with Vue's browser support
     "target": "es5",
+    "downlevelIteration": true,
     // this enables stricter inference for data properties on `this`
     "strict": true,
     "noImplicitAny": true,
     // if using webpack 2+ or rollup, to leverage tree shaking:
     "module": "es2015",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": [
+      "es2019",
+      "dom"
+    ]
   },
   "exclude": ["node_modules"]
 }
